deploy/prod/02_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plugin-developer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - secretName: plugin-developer-tls
      hosts:
        - plugin-developer.prod.plugins.vultisig.com
  rules:
    - host: plugin-developer.prod.plugins.vultisig.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 80
